Correct a bug of contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,8 +237,7 @@ a {
 #SearchInputField::placeholder {
   color: black;
   opacity: 1;
-  color: white;
-  letter-spacing: 1px;
+  font-weight: bold;
 }
 
 #categories {
